index, css completo

--- a/index.html
+++ b/index.html
@@ -10,34 +10,75 @@
     <header>
         <nav>
             <ul>
+                <li><a href="#sobre-mi">Sobre Mí</a></li>
                 <li><a href="#educacion">Educación</a></li>
                 <li><a href="#experiencia">Experiencia</a></li>
                 <li><a href="#portafolio">Portafolio</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
-    <section id="educacion">
-        <h2>Educación</h2>
-        <p>Tu información educativa aquí.</p>
-    </section>
-    <section id="experiencia">
-        <h2>Experiencia</h2>
-        <p>Tu experiencia laboral aquí.</p>
-    </section>
-    <section id="portafolio">
-        <h2>Portafolio</h2>
-        <div class="proyecto">
-            <h3>Proyecto 1</h3>
-            <img src="ruta/a/tu/imagen1.jpg" alt="Descripción del proyecto 1">
-            <p>Descripción breve del proyecto 1.</p>
-        </div>
-        <div class="proyecto">
-            <h3>Proyecto 2</h3>
-            <img src="ruta/a/tu/imagen2.jpg" alt="Descripción del proyecto 2">
-            <p>Descripción breve del proyecto 2.</p>
-        </div>
-        <!-- Agrega más proyectos según sea necesario -->
-    </section>
+
+    <div class="container">
+        <section id="sobre-mi">
+            <h2>Sobre Mí</h2>
+            <p>
+                Hola, soy Felipe Lagos, un profesional en Informática con experiencia en el área IT. 
+                Me apasiona la tecnología y la resolución de problemas.
+            </p>
+        </section>
+
+        <section id="educacion">
+            <h2>Educación</h2>
+            <p>
+                <strong>Analista Programador</strong><br>
+                Instituto Nacional de Capacitación Profesional de Chile, Rancagua, Chile<br>
+                Egresado: 2023
+            </p>
+        </section>
+
+        <section id="experiencia">
+            <h2>Experiencia</h2>
+            <ol>
+                <li>
+                    <strong>Transportes Rio Negro S.A</strong> <br>
+                    [Diciembre 2023 - Actualidad] <br>
+                    <ol>
+                        -Administracion de BD <br>
+                        -Configuracion Redes locales <br>
+                        -Soporte Hardware y Software
+
+                    </ol>
+
+
+                </li>
+                <!-- Agrega más experiencias si es necesario -->
+            </ol>
+        </section>
+
+        <section id="portafolio">
+            <h2>Portafolio</h2>
+            <div class="proyecto">
+                <h3>Proyecto 1</h3>
+                <img src="/assets/img/proyecto1.png" alt="Descripción del proyecto 1">
+                <p>FitLife es una app que ofrece planes personalizados de ejercicio y nutrición. Con un diseño intuitivo, permite a los usuarios seguir su progreso, registrar comidas y motivarse a través de desafíos y una comunidad de apoyo.</p>
+            </div>
+            <div class="proyecto">
+                <h3>Proyecto 2</h3>
+                <img src="/assets/img/proyecto2.png" alt="Descripción del proyecto 2">
+                <p>EduMaster es una plataforma de cursos en línea que ofrece lecciones interactivas y certificaciones. Su diseño intuitivo facilita el seguimiento de progreso y la colaboración entre usuarios.</p>
+            </div>
+            <!-- Agrega más proyectos según sea necesario -->
+        </section>
+
+        <section id="contacto">
+            <h2>Contacto</h2>
+            <p>Email: luislagoscabrera@gmail.com</p>
+            <p>Teléfono: +56 9 34224423</p>
+            <!-- Puedes añadir más detalles de contacto si lo deseas -->
+        </section>
+    </div>
+
     <footer>
         <p>Felipe Lagos - &copy; 2024</p>
     </footer>
